--- a/src/app/pages/author-full-view/author-full-view.component.html
+++ b/src/app/pages/author-full-view/author-full-view.component.html
@@ -14,5 +14,6 @@
   <div class="architect-biography">
     <h4 class="architect-biography-title">{{'ARCHITECT.BIOGRAPHY' | translate}}</h4>
     <app-timeline [biography]="architect.biography"></app-timeline>
+    <app-map [sights]='architect.works'></app-map>
   </div>
 </div>
