--- a/src/app/components/authors-cards-list/authors-cards-list.component.html
+++ b/src/app/components/authors-cards-list/authors-cards-list.component.html
@@ -17,7 +17,7 @@
         {{author.shortDescription}}
       </div>
       <mat-card-actions>
-        <button class="more-button" mat-raised-button (click)="onMoreClick(author.id)">More...</button>
+        <button class="more-button" mat-raised-button (click)="onMoreClick(author.id)">{{'ARCHITECTS.MORE' | translate}}</button>
       </mat-card-actions>
     </mat-card>
   </div>
