--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -19,3 +19,5 @@ $divider-background: linear-gradient(
   rgba(168, 168, 168, 0.65)
 );
 $divider-color: #fff;
+$grey-color: #e6e6e6;
+$black-color: #000000;
