--- a/src/app/pages/author-full-view/author-full-view.component.scss
+++ b/src/app/pages/author-full-view/author-full-view.component.scss
@@ -4,6 +4,18 @@
   padding: 16px;
   color: #455a64;
 
+  .centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+
+  &-section-title {
+    font-size: 22px;
+  }
+
   &-main-info {
     display: flex;
 
