--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 @mixin divider {
   background: $divider-background;
@@ -19,7 +19,7 @@
   transition: all 0.5s;
 
   &:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.25);
     background-color: $author-of-day-button-background-color;
     transform: scale(1.2);
   }
