--- a/src/app/components/team-member-card/team-member-card.component.scss
+++ b/src/app/components/team-member-card/team-member-card.component.scss
@@ -1,4 +1,4 @@
-.card{
+.card {
   width: 250px;
   height: 370px;
   background: white;
@@ -7,7 +7,7 @@
   margin: 10px 20px;
   position: relative;
   cursor: pointer;
-  transition: .5s;
+  transition: 0.5s;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -18,6 +18,7 @@
   img {
     width: 250px;
     height: 250px;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
   }
   mat-card-header {
     justify-content: center;
@@ -32,17 +33,17 @@
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    background: url("../../../assets/images/GitHub-Mark-120px-plus.png");
+    background: url('../../../assets/images/GitHub-Mark-120px-plus.png');
     background-size: cover;
   }
 }
 
 @keyframes fadeIn {
   0% {
-    opacity:0;
+    opacity: 0;
     transform: translateY(-40px);
   }
   100% {
-    opacity:1;
+    opacity: 1;
   }
 }
