--- a/src/app/components/author-of-day/author-of-day.component.scss
+++ b/src/app/components/author-of-day/author-of-day.component.scss
@@ -1,48 +1,73 @@
 @import '../../../variables';
-@import '../../../mixins';
 
-.header {
-  @include divider;
-  font-size: 24px;
-  font-weight: bold;
+.card{
+  max-height: calc(100vh - 252px);
+  min-width: 315px;
+  border-radius: 0;
+  margin: 0px 20px;
+  position: relative;
+  transition: .5s;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation: fadeIn ease 1s;
+  background: rgba(0, 0, 0, 0.2);
+  .card__header {
+    font-size: 30px;
+    font-family: $primary-bold-font-family;
+    color: $contrast-text-color;
+    text-align: center;
+  }
+  img {
+    min-width: 250px;
+    max-width: 370px;
+    height: auto;
+  }
+  mat-card-header {
+    justify-content: center;
+    mat-card-title {
+      font-size: 21px;
+      font-family: $primary-font-family;
+      color: $contrast-text-color;
+    }
+    mat-card-subtitle {
+      font-size: 14px;
+      font-family: $primary-font-family;
+      color: $contrast-text-color;
+      opacity: 0.8;
+    }
+  }
+  mat-card-content {
+    font-size: 18px;
+    font-family: $primary-font-family;
+    color: $contrast-text-color;
+    text-indent: 1em;
+  }
+  mat-card-actions {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    .button-more {
+      &:hover {
+        transform: translateY(5px);
+      }
+    }
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity:0;
+    transform: translateY(-40px);
+  }
+  100% {
+    opacity:1;
+  }
 }
 
 .spinner-container {
   display: flex;
   justify-content: center;
   padding: 50px;
-}
-
-.author-of-day {
-  background-color: $author-of-day-background-color;
-  width: 100%;
-  padding: 40px;
-  display: flex;
-  justify-content: center;
-  @media (max-width: $breakpoint-tablet) {
-    flex-direction: column;
-  }
-}
-
-.col {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-img {
-  height: 400px;
-  border-radius: 10px;
-  transition: 0.5s;
-
-  &:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    transform: scale(1.1);
-  }
-}
-
-.button-more {
-  @include button;
 }
