--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,6 @@
 
 .mat-sidenav {
   width: 75%;
-  background-color: $header-background-color;
 }
 
 .mat-sidenav-container {
@@ -14,5 +13,24 @@
 }
 
 main {
+  position: absolute;
   margin-top: 70px;
+  width: 100vw;
+  height: calc(100vh - 140px);
+  z-index: 3;
+  overflow-y: auto;
+  //overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 5px grey;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.3);
 }
