--- a/src/app/components/authors-cards-list/authors-cards-list.component.scss
+++ b/src/app/components/authors-cards-list/authors-cards-list.component.scss
@@ -1,6 +1,25 @@
+@import '../../../variables';
+
 #host-div {
   display: flex;
   flex-direction: column;
+  margin-top: 60px;
+  mat-paginator {
+    position: fixed;
+    width: 100vw;
+    bottom: 70px;
+    background: rgba(0, 0, 0, 0.2);
+    font-size: 14px;
+    font-family: $primary-font-family;
+    color: $contrast-text-color;
+    opacity: 0.8;
+  }
+}
+
+.mat-form-filed {
+  font-size: 14px;
+  font-family: $primary-font-family;
+  color: $contrast-text-color;
 }
 
 #cards {
@@ -9,6 +28,8 @@
   grid-template-columns: 1fr;
   gap: 25px;
   margin-top: 70px;
+  height: calc(100vh - 300px);
+  overflow-y: auto;
   @media screen and (min-width: 270px) {
     margin-top: 20px;
   }
@@ -28,12 +49,14 @@ mat-card {
   width: 200px;
   height: 350px;
   padding: 10px;
+  background: rgba(0, 0, 0, 0.2);
+  color: $contrast-text-color;
+  overflow: hidden;
+  border-radius: 0;
+  //box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
   @media screen and (min-width: 320px) {
     width: 300px;
   }
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
 }
 
 mat-card-header {
@@ -42,22 +65,42 @@ mat-card-header {
 
 mat-card-subtitle {
   margin-bottom: 10px;
+  font-size: 14px;
+  font-family: $primary-font-family;
+  color: $contrast-text-color;
+  opacity: 0.8;
 }
 
-.more-button {
+mat-card-actions {
   position: absolute;
-  bottom: 10px;
-  left: 10px;
+  bottom: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .avatar {
   width: 60px;
   height: 60px;
-  border-radius: 20%;
+  border-radius: 0;
 }
 
 .description {
   padding-right: 10px;
   max-height: 180px;
   overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 5px grey;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.3);
 }
