--- a/src/app/components/team-member-card/team-member-card.component.scss
+++ b/src/app/components/team-member-card/team-member-card.component.scss
@@ -1,9 +1,10 @@
+@import '../../../variables';
+
 .card{
   width: 250px;
   height: 370px;
-  background: white;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 0;
   margin: 10px 20px;
   position: relative;
   cursor: pointer;
@@ -21,6 +22,17 @@
   }
   mat-card-header {
     justify-content: center;
+    mat-card-title {
+      font-size: 21px;
+      font-family: $primary-font-family;
+      color: $contrast-text-color;
+    }
+    mat-card-subtitle {
+      font-size: 14px;
+      font-family: $primary-font-family;
+      color: $contrast-text-color;
+      opacity: 0.8;
+    }
   }
   mat-card-actions {
     display: flex;
@@ -34,6 +46,7 @@
     border-radius: 50%;
     background: url("../../../assets/images/GitHub-Mark-120px-plus.png");
     background-size: cover;
+    filter: invert(100%);
   }
 }
 
