--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -34,3 +34,4 @@ $divider-background: linear-gradient(
 $divider-color: #fff;
 $grey-color: #e6e6e6;
 $black-color: #000000;
+$bg-red-color: crimson;
