feat: translation of worklog

--- a/src/app/components/evaluation/evaluation.component.scss
+++ b/src/app/components/evaluation/evaluation.component.scss
@@ -1,5 +1,10 @@
-@import "../../../mixins";
+@import '../../../variables';
+@import '../../../mixins';
 
 h1 {
   @include divider;
+}
+
+.evaluation {
+  color: $color-white;
 }
