--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -4,7 +4,7 @@
   </a>
 
   <mat-nav-list>
-    <a mat-list-item [href]="item.path" *ngFor="let item of navSections">
+    <a mat-list-item [routerLink]="item.path" *ngFor="let item of navSections">
       <span class="mat-list-item-text">{{ item.name | translate }}</span>
     </a>
  </mat-nav-list>
