--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   font-size: 1.4em;
   margin-top: 30px;
+  padding: 0px 50px;
 
   .sidenav-title {
     color: $color-white;
@@ -16,8 +17,14 @@
     width: 100%;
   }
 
-  .mat-list-item-text {
-    color: $color-white;
+  .mat-list-item {
+    color: $contrast-text-color;
     font-size: 1.3em !important;
+    font-family: $primary-bold-font-family;
+
+    &.active,
+    &:hover {
+      color: #ff0300;
+    }
   }
 }
