feat: portal description, hovers

--- a/src/app/components/authors-cards-list/authors-cards-list.component.scss
+++ b/src/app/components/authors-cards-list/authors-cards-list.component.scss
@@ -1,4 +1,5 @@
 @import '../../../variables';
+@import '../../../mixins';
 
 #host-div {
   display: flex;
@@ -103,4 +104,8 @@ mat-card-actions {
 
 ::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.3);
+}
+
+.more-button {
+  @include hoveredButton;
 }
