--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -9,6 +9,14 @@
   word-spacing: 10px;
 }
 
+@mixin hoveredButton {
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.25);
+    background-color: $author-of-day-button-background-color;
+    transform: scale(1.2);
+  }
+}
+
 @mixin button {
   padding: 20px 50px;
   border: 1px solid black;
