--- a/src/app/components/author-of-day/author-of-day.component.scss
+++ b/src/app/components/author-of-day/author-of-day.component.scss
@@ -1,12 +1,13 @@
 @import '../../../variables';
+@import '../../../mixins';
 
-.card{
+.card {
   max-height: calc(100vh - 252px);
   min-width: 315px;
   border-radius: 0;
   margin: 0px 20px;
   position: relative;
-  transition: .5s;
+  transition: 0.5s;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -49,20 +50,18 @@
     justify-content: center;
     padding: 0;
     .button-more {
-      &:hover {
-        transform: translateY(5px);
-      }
+      @include hoveredButton;
     }
   }
 }
 
 @keyframes fadeIn {
   0% {
-    opacity:0;
+    opacity: 0;
     transform: translateY(-40px);
   }
   100% {
-    opacity:1;
+    opacity: 1;
   }
 }
 
