--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -3,10 +3,7 @@
     <app-author-of-day [authorOfDay]="authorOfDay$ | async"></app-author-of-day>
   </div>
   <mat-card class="main__about-culture-portal">
-    <mat-card-title>About culture portal</mat-card-title>
-    <mat-card-subtitle>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</mat-card-subtitle>
+    <mat-card-title>{{'MAIN_PAGE.HEAD' | translate}}</mat-card-title>
+    <mat-card-subtitle>{{'MAIN_PAGE.DESCRIPTION' | translate}}</mat-card-subtitle>
   </mat-card>
 </div>
