--- a/src/app/components/author-of-day/author-of-day.component.scss
+++ b/src/app/components/author-of-day/author-of-day.component.scss
@@ -2,8 +2,7 @@
 @import '../../../mixins';
 
 .card {
-  max-height: calc(100vh - 252px);
-  min-width: 315px;
+  min-width: 250px;
   border-radius: 0;
   margin: 0px 20px;
   position: relative;
@@ -21,8 +20,7 @@
     text-align: center;
   }
   img {
-    min-width: 250px;
-    max-width: 370px;
+    width: 250px;
     height: auto;
   }
   mat-card-header {
