Fix mobile styles

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -32,4 +32,8 @@ header {
 .header {
   width: 100%;
   min-height: 70px;
+
+  @media (max-width: $breakpoint-tablet) {
+    padding: 0 16px;
+  }
 }
