--- a/src/app/components/author-of-day/author-of-day.component.scss
+++ b/src/app/components/author-of-day/author-of-day.component.scss
@@ -4,7 +4,7 @@
 .card {
   min-width: 250px;
   border-radius: 0;
-  margin: 0px 20px;
+  margin: 0 20px;
   position: relative;
   transition: 0.5s;
   overflow: hidden;
@@ -13,6 +13,9 @@
   align-items: center;
   animation: fadeIn ease 1s;
   background: rgba(0, 0, 0, 0.2);
+  @media (max-width: 420px) {
+    max-height: fit-content;
+  }
   .card__header {
     font-size: 30px;
     font-family: $primary-bold-font-family;
