--- a/src/app/pages/worklog/worklog.component.scss
+++ b/src/app/pages/worklog/worklog.component.scss
@@ -19,12 +19,17 @@ section {
 
 table {
   width: 80%;
+
+  @media (max-width: 420px) {
+    width: 100%;
+    padding: 0 8px;
+  }
 }
 
 td,
 th,
 table {
-  box-shadow: 0px 0px 10px grey;
+  box-shadow: 0 0 10px grey;
   border: 1px solid black;
 }
 
